Docker container successfully running on home machine. Next step: laptop

--- a/PhotoServer/app/views/users/new.html.erb
+++ b/PhotoServer/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
   <%= form.email_field :email_address,
                       required: true,
                       autocomplete: "email_address",
-                      placeholder: "Enter your name",
+                      placeholder: "Enter your email address ",
                       value: params[:email_address] %> <br>
   <%= form.password_field :password,
                          required: true,
